# krackerapp

./: .gitmodules  Readme.Md  StepsDocs.txt
ops/: schema.sql  seed.sql
scripts/: build.sh
server/: CMakeLists.txt  config.json
server/public/: index.html
server/src/: main.cpp
server/src/filters/: AuthRequired.cc  AuthRequired.h
server/src/utils/: Crypto.cc  Crypto.h  Jwt.cc  Jwt.h
